Fixed spacing of cards on big screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -145,7 +145,7 @@
     display: none;
   }
   .card-container {
-   justify-content: center;
+   justify-content: space-between;
   }
 }
 
